# learn-cmake

./: CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: build_cmake.yml
ExternalProject-vlc/: CMakeLists.txt  main.cpp
HelloWorld/: CMakeLists.txt  main.cpp
Version/: CMakeLists.txt  main.cpp
example/: CMakeLists.txt  main.cpp
math/: CMakeLists.txt
mymath/: CMakeLists.txt  mymath.cpp  mymath.h
myshared/: CMakeLists.txt  myshared.cpp  myshared.h
myshared2/: CMakeLists.txt  myshared2.cpp  myshared2.h
mystaticd/: CMakeLists.txt  mystaticd.cpp  mystaticd.h
version/: CMakeLists.txt
versionexample/: CMakeLists.txt
